# MOLA-SLAM

./: .gitignore  README.md  check_dependencies.sh
mola_ws/src/MOLA-SLAM/src/mola/kitti_metrics_eval/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/kitti_metrics_eval/apps/: kitti-metrics-eval.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_demos/mola-cli-launchs/: image_directory_just_replay.yaml  kitti_just_replay.yaml  lidar_bin_directory_just_replay.yaml  mulran_just_replay.yaml  mulran_just_replay_to_ros2.yaml  ros2_ouster_just_view.yaml  rosbag2_pointcloud_just_view.yaml  video_camera_source_just_replay.yaml  video_file_source_just_replay.yaml
mola_ws/src/MOLA-SLAM/src/mola/mola_demos/ros2-launchs/: ros-mulran-pf-localization.launch.py
mola_ws/src/MOLA-SLAM/src/mola/mola_demos/ros2-params/: mrpt-pf.yaml
mola_ws/src/MOLA-SLAM/src/mola/mola_demos/rviz2/: mulran.rviz
mola_ws/src/MOLA-SLAM/src/mola/mola_input_euroc_dataset/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_input_euroc_dataset/src/: EurocDataset.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_input_lidar_bin_dataset/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_input_lidar_bin_dataset/src/: BinFileDataset.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_input_video/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_input_video/src/: VideoDataset.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_kernel/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_kernel/src/: MinimalModuleContainer.cpp  pretty_print_exception.cpp  register.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_launcher/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_launcher/apps/: CMakeLists.txt  mola-cli.cpp  mola-dir.cpp  mola-yaml-parser.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_launcher/cmake/: FindFilesystem.cmake
mola_ws/src/MOLA-SLAM/src/mola/mola_launcher/src/: MolaDLL_Loader.cpp  MolaDLL_Loader.h  MolaLauncherApp.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_metric_maps/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_metric_maps/src/: HashedVoxelPointCloud.cpp  KeyframePointCloudMap.cpp  NDT.cpp  OccGrid.cpp  SparseTreesPointCloud.cpp  SparseVoxelPointCloud.cpp  register.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_metric_maps/tests/: CMakeLists.txt  test-mola_metric_maps_hashedvoxels.cpp  test-mola_metric_maps_ndt.cpp  test-occgrid.cpp  test-serialization.cpp  test-sparsevoxelpointcloud.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_msgs/srv/: MapLoad.srv  MapSave.srv  MolaRuntimeParamGet.srv  MolaRuntimeParamSet.srv  RelocalizeFromStateEstimator.srv  RelocalizeNearPose.srv
mola_ws/src/MOLA-SLAM/src/mola/mola_relocalization/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_relocalization/src/: RelocalizationICP_SE2.cpp  RelocalizationLikelihood_SE2.cpp  find_best_poses_se2.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_relocalization/tests/: CMakeLists.txt  test-relocalization-se2-kitti.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_traj_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_traj_tools/python/: ncd-csv2tum
mola_ws/src/MOLA-SLAM/src/mola/mola_traj_tools/src/: traj_rebase.cpp  traj_tf_left.cpp  traj_tf_right.cpp  traj_tum2ypr.cpp  traj_ypr2tum.cpp
mola_ws/src/MOLA-SLAM/src/mola/mola_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola/mola_viz/src/: MolaViz.cpp  mola_icon_64x64.h
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/docs/: module-mola-imu-preintegration.rst
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/include/mola_imu_preintegration/: ImuInitialCalibrator.h  ImuIntegrationParams.h  ImuIntegrator.h  types.h  (+3 more)
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/scripts/: clang-formatter.sh
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/src/: ImuInitialCalibrator.cpp  ImuIntegrationParams.cpp  ImuIntegrator.cpp  ImuTransformer.cpp  LocalVelocityBuffer.cpp  register.cpp  trajectory_from_buffer.cpp
mola_ws/src/MOLA-SLAM/src/mola_imu_preintegration/tests/: CMakeLists.txt  test-imu-rotation-integrator.cpp  test-trajectory-from-buffer.cpp  test-velocity-buffer.cpp
mola_ws/src/MOLA-SLAM/src/mola_lidar_odometry/test/: CMakeLists.txt  mulran_KAIST01_fragment_gt.tum  test_lidar_odometry_rawlog.cpp  test_lidar_odometry_rosbag2.cpp
mola_ws/src/MOLA-SLAM/src/mola_state_estimation/mola_state_estimation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mola_state_estimation/mola_state_estimation_simple/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mola_state_estimation/mola_state_estimation_smoother/: .clang-format  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mola_ws/src/MOLA-SLAM/src/mrpt_ros_bridge/ros2bridge/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/MOLA-SLAM/src/mrpt_ros_bridge/rosbag2rawlog/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/mrpt_navigation/mrpt_pf_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/mrpt_navigation/mrpt_pf_localization/launch/: localization.launch.py
mola_ws/src/mrpt_navigation/mrpt_pf_localization/src/: main.cpp  mrpt_pf_localization_component.cpp
mola_ws/src/mrpt_navigation/mrpt_pointcloud_pipeline/: CHANGELOG.rst  CMakeLists.txt  package.xml
mola_ws/src/mrpt_navigation/mrpt_pointcloud_pipeline/launch/: pointcloud_pipeline.launch.py
mola_ws/src/mrpt_navigation/mrpt_pointcloud_pipeline/src/: main.cpp  mrpt_pointcloud_pipeline_component.cpp
(+323 files in other folders)
