<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>kitti_metrics_eval</name>
  <version>2.2.0</version>
  <description>CLI tool to evaluate the KITTI odometry bechmark metrics to trajectory files</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <url type="website">https://github.com/MOLAorg/mola/tree/develop/kitti_metrics_eval</url>


  <depend>mola_common</depend>
  <depend>mrpt_libmath</depend>
  <depend>mrpt_libposes</depend>
  <depend>mrpt_libtclap</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
