<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_input_euroc_dataset</name>
  <version>2.2.0</version>
  <description>Offline RawDataSource from EUROC SLAM datasets</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <url type="website">https://github.com/MOLAorg/mola/tree/develop/mola_input_euroc_dataset</url>


  <depend>mola_common</depend>
  <depend>mola_kernel</depend>

  <depend>mrpt_libobs</depend>
  <depend>mrpt_libmath</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin packages -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
