<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_launcher</name>
  <version>2.2.0</version>
  <description>Launcher app for MOLA systems</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPLv3</license>

  <url type="website">https://github.com/MOLAorg/mola/tree/develop/mola_launcher</url>


  <depend>mola_kernel</depend>

  <depend>mrpt_libbase</depend>
  <depend>mrpt_libtclap</depend>

  <doc_depend>doxygen</doc_depend>

  <build_depend>ros_environment</build_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_cmake_lint_cmake</test_depend> -->
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
