<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_relocalization</name>
  <version>2.2.0</version>
  <description>C++ library with algorithms for relocalization, global localization, or pose estimation given a large initial uncertainty</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license file="LICENSE">GPLv3</license>

  <url type="website">https://github.com/MOLAorg/mola/tree/develop/mola_relocalization</url>


  <depend>mola_common</depend>
  <depend>mp2p_icp</depend>
  <depend>mola_pose_list</depend>

  <depend>mrpt_libobs</depend>
  <depend>mrpt_libslam</depend>
  <depend>mrpt_libmaps</depend>

  <test_depend>mola_test_datasets</test_depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->

</package>
